--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,11 @@ version = "0.1.0"
 members = ["testsuite"]
 
 [dependencies]
-cortex-m = "0.6.4"
+cortex-m = "0.7.1"
 cortex-m-rt = "0.6.13"
-defmt = "0.1.2"
-defmt-rtt = "0.1.0"
-panic-probe = { version = "0.1.0", features = ["print-defmt"] }
+defmt = "0.2.0"
+defmt-rtt = "0.2.0"
+panic-probe = { version = "0.2.0", features = ["print-defmt"] }
 
 [dependencies.stm32f4xx-hal]
 version = "0.8"
@@ -33,6 +33,7 @@ defmt-info = []
 defmt-warn = []
 defmt-error = []
 
+# cargo build/run
 [profile.dev]
 codegen-units = 1
 debug = 2
@@ -41,6 +42,16 @@ incremental = false
 opt-level = 3 # <-
 overflow-checks = true # <-
 
+# cargo test
+[profile.test]
+codegen-units = 1
+debug = 2
+debug-assertions = true # <-
+incremental = false
+opt-level = 3 # <-
+overflow-checks = true # <-
+
+# cargo build/run --release
 [profile.release]
 codegen-units = 1
 debug = 2
@@ -49,3 +60,21 @@ incremental = false
 lto = 'fat'
 opt-level = 3 # <-
 overflow-checks = false # <-
+
+# cargo test --release
+[profile.bench]
+codegen-units = 1
+debug = 2
+debug-assertions = false # <-
+incremental = false
+lto = 'fat'
+opt-level = 3 # <-
+overflow-checks = false # <-
+
+# uncomment this to switch from the crates.io version of defmt to its git version
+# check app-template's README for instructions
+# [patch.crates-io]
+# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
+# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
+# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
+# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
