--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,11 @@ members = ["testsuite"]
 [dependencies]
 cortex-m = "0.7.1"
 cortex-m-rt = "0.6.13"
+cortex-m-rtic = "0.6.0-alpha.1"
 defmt = "0.2.0"
 defmt-rtt = "0.2.0"
 panic-probe = { version = "0.2.0", features = ["print-defmt"] }
-
-[dependencies.stm32f4xx-hal]
-version = "0.8"
-features = ["rt", "stm32f411"]
+stm32f4xx-hal = { version = "0.8", features = ["rt", "stm32f411"] }
 
 [features]
 # set logging levels here
