--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ cortex-m-rt = "0.6.13"
 cortex-m-rtic = "0.6.0-alpha.1"
 defmt = "0.2.0"
 defmt-rtt = "0.2.0"
+dwt-systick-monotonic = "0.1.0-alpha.1"
 panic-probe = { version = "0.2.0", features = ["print-defmt"] }
 stm32f4xx-hal = { version = "0.8", features = ["rt", "stm32f411"] }
 
