--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,14 @@ version = "0.1.0"
 members = ["testsuite"]
 
 [dependencies]
+asm-delay = "0.9.0"
 cortex-m = "0.7.1"
 cortex-m-rt = "0.6.13"
 cortex-m-rtic = "0.6.0-alpha.1"
 defmt = "0.2.0"
 defmt-rtt = "0.2.0"
 dwt-systick-monotonic = "0.1.0-alpha.1"
+hd44780-driver = "0.4"
 panic-probe = { version = "0.2.0", features = ["print-defmt"] }
 stm32f4xx-hal = { version = "0.9", features = ["rt", "stm32f411"] }
 
