--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,14 @@ members = ["testsuite"]
 asm-delay = "0.9.0"
 cortex-m = "0.7.2"
 cortex-m-rt = "0.6.14"
-cortex-m-rtic = "0.6.0-alpha.4"
+#cortex-m-rtic = "0.6.0-alpha.4"
+cortex-m-rtic = { path = "../cortex-m-rtic" }
 defmt = "0.2.2"
 defmt-rtt = "0.2.0"
 dwt-systick-monotonic = "0.1.0-alpha.2"
+embedded-hal = "0.2.4"
 hd44780-driver = "0.4"
+infrared = "0.11.0"
 panic-probe = { version = "0.2.0", features = ["print-defmt"] }
 stm32f4xx-hal = { version = "0.9", features = ["rt", "stm32f411"] }
 
