--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,7 @@ members = ["testsuite"]
 asm-delay = "0.9.0"
 cortex-m = "0.7.2"
 cortex-m-rt = "0.6.14"
-#cortex-m-rtic = "0.6.0-alpha.4"
-cortex-m-rtic = { path = "../cortex-m-rtic" }
+cortex-m-rtic = "0.6.0-alpha.4"
 defmt = "0.2.2"
 defmt-rtt = "0.2.0"
 dwt-systick-monotonic = "0.1.0-alpha.2"
